pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/basic.listeners.golden.yaml
resources:
- name: outbound:127.0.0.1:10001
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 127.0.0.1
        portValue: 10001
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          normalizePath: true
          routeConfig:
            name: outbound:backend
            requestHeadersToAdd:
            - header:
                key: x-kuma-tags
                value: '&kuma.io/protocol=http&&kuma.io/service=web&'
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: backend
              routes:
              - match:
                  path: /v2
                name: BRLj9+uPP4C2xD2r8YkH/x30Vn34XWSc48Fj/pHZdTw=
                route:
                  cluster: backend-c72efb5be46fae6b
                  timeout: 0s
              - match:
                  prefix: /v2/
                name: BRLj9+uPP4C2xD2r8YkH/x30Vn34XWSc48Fj/pHZdTw=
                route:
                  cluster: backend-c72efb5be46fae6b
                  timeout: 0s
              - match:
                  path: /v3
                name: BRLj9+uPP4C2xD2r8YkH/x30Vn34XWSc48Fj/pHZdTw=
                route:
                  cluster: backend-c72efb5be46fae6b
                  timeout: 0s
              - match:
                  prefix: /v3/
                name: BRLj9+uPP4C2xD2r8YkH/x30Vn34XWSc48Fj/pHZdTw=
                route:
                  cluster: backend-c72efb5be46fae6b
                  timeout: 0s
          statPrefix: backend
    metadata:
      filterMetadata:
        io.kuma.tags:
          kuma.io/service: backend
    name: outbound:127.0.0.1:10001
    trafficDirection: OUTBOUND
